Improved permenant id names

--- a/Papiea-design.org
+++ b/Papiea-design.org
@@ -24,7 +24,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 * Definitions
   :PROPERTIES:
-  :CUSTOM_ID: h-A6599723-E88D-44A3-A967-AE0C49A54CC6
+  :CUSTOM_ID: h-Definitions-172
   :END:
   - _Spec_ - a map containing the desired state of a particular entity
   - _Status_ - a map containing the current statue of a particular entity. Always a superset of Spec
@@ -38,7 +38,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
   - _Tasks_ - a mechanism for following the progress of resolving Diffs
 * Basic Interfaces
   :PROPERTIES:
-  :CUSTOM_ID: h-CE2D607E-693A-4AEC-A492-4232FDFB9D78
+  :CUSTOM_ID: h-Basic-Interfaces-10
   :END:
   The main concept behind the intentful approach is the ability to know what is the desired state of
   our system and what is the actual current state. Once we have this knowledge, many different kinds
@@ -50,7 +50,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** Metadata
    :PROPERTIES:
-   :CUSTOM_ID: h-CE60E8C5-765E-4454-A5F9-2780A2464889
+   :CUSTOM_ID: h-Metadata-530
    :END:
    Metadata has a structured portion which contains fields that defines the identity of a particular
    entity. The fields that identify the entity are:
@@ -79,7 +79,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
   
 ** Spec
    :PROPERTIES:
-   :CUSTOM_ID: h-BAE5B042-453A-4E68-9829-DFEED95D9C4F
+   :CUSTOM_ID: h-Spec-213
    :END:
    The =Spec=, which is the desired state, is simply a json object, or an unstructured map. It can
    and should get a structure when used specifically by any particular entity [[*Kind][Kind]]. However, at the
@@ -94,7 +94,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** Status
    :PROPERTIES:
-   :CUSTOM_ID: h-48BE09F4-1DFC-4110-9F9F-67399113C57C
+   :CUSTOM_ID: h-Status-142
    :END:
    The =Status=, which is a representation of the true current state of the entity, is also simply a
    json. Its content and structure is a superset of [[*Spec][Spec]], meaning that every field in =Spec= will
@@ -110,7 +110,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** Entity
    :PROPERTIES:
-   :CUSTOM_ID: h-122002C8-E0B4-40F9-A48B-E75FDA28AAC6
+   :CUSTOM_ID: h-Entity-760
    :END:
    An Entity is simply the tuple =(Metadata, Spec, Status)=. It usually denotes a snapshot in time of a particular entity.
 
@@ -125,7 +125,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** Kind
    :PROPERTIES:
-   :CUSTOM_ID: h-1A45850B-821C-439F-BE1C-5CA5FF2B7A79
+   :CUSTOM_ID: h-Kind-898
    :END:
    A Kind is the entity's metadata. It contains an entire description of what the entity is and what
    it may do. This information will be used to provideing full CRUD operation on the entity
@@ -233,7 +233,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
   
 ** Entity Reference
    :PROPERTIES:
-   :CUSTOM_ID: h-72D813C8-1AEE-449B-BE2E-0FB4FC53FD5A
+   :CUSTOM_ID: h-Entity-Reference-910
    :END:
    Entities can point to other entities using a reference. A reference may onlu refers to the
    identity of an entity, and it is the intent engine that returns the entity's most recent spec and
@@ -253,7 +253,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** Provider description
    :PROPERTIES:
-   :CUSTOM_ID: h-97314854-673B-4CD4-874A-B9C1F9AE6B44
+   :CUSTOM_ID: h-Provider-description-295
    :END:
    Papiea is extensible by the use of =Providers=.  A Provider defines entities by providing their
    structure, their procedures and intentful behaviors. Along with declaratively define the entity's
@@ -278,11 +278,11 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 * Modules
   :PROPERTIES:
-  :CUSTOM_ID: h-855804C6-C489-4C0E-97BC-889C0D9634F2
+  :CUSTOM_ID: h-Modules-653
   :END:
 ** Databases
    :PROPERTIES:
-   :CUSTOM_ID: h-66558F55-8F93-44E5-9A37-0BD433627126
+   :CUSTOM_ID: h-Databases-582
    :END:
    #+BEGIN_note
    *Multitenancy*: All databases are aware of tenants. It may be implemented as a column or
@@ -291,7 +291,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
    
 *** Status
     :PROPERTIES:
-    :CUSTOM_ID: h-9E8BF858-2CCE-4A4D-A786-ED53BA3F79E9
+    :CUSTOM_ID: h-Status-801
     :END:
     Status database will be a mapping from a metadata (namely, =uuid= and =kind=) to a status json document. 
 
@@ -304,7 +304,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
     
 **** Interface
      :PROPERTIES:
-     :CUSTOM_ID: h-7E3D79F1-DC44-4C08-8EA0-CC683CEB36BA
+     :CUSTOM_ID: h-Interface-619
      :END:
     #+Name: status-db-interface
     #+BEGIN_SRC typescript
@@ -332,10 +332,10 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
       }
 
     #+END_SRC
-
+    
 *** Spec
     :PROPERTIES:
-    :CUSTOM_ID: h-67BEA7CF-81F7-4C99-84AB-FC36B20906C6
+    :CUSTOM_ID: h-Spec-412
     :END:
     Unlike status which can always be fetched from the providers, spec is a record of the user's
     intent and must be persistent. It must also be scalable and highly available. It must have a
@@ -344,7 +344,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 **** Interface
      :PROPERTIES:
-     :CUSTOM_ID: h-C485E97F-9BAD-4B12-820E-02E408231E6E
+     :CUSTOM_ID: h-Interface-509
      :END:
     #+Name: spec-db-interface
     #+BEGIN_SRC go
@@ -378,7 +378,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 *** Providers
     :PROPERTIES:
-    :CUSTOM_ID: h-8693B55A-1808-4981-B1E1-D07BFF286BD3
+    :CUSTOM_ID: h-Providers-280
     :END:
     Providers database stores all the configurations a provider has registered (encoded in [[*Provider description][Provider
     description]] section). It is used by the engine to record which providers are registered. The
@@ -387,7 +387,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 **** Interface
      :PROPERTIES:
-     :CUSTOM_ID: h-48C4E5F4-E98F-4DAA-8DB7-1576C1EC3B09
+     :CUSTOM_ID: h-Interface-83
      :END:
     #+Name: providers-db-interface
     #+BEGIN_SRC typescript
@@ -414,11 +414,11 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** Dependent services
    :PROPERTIES:
-   :CUSTOM_ID: h-DEA1F8F2-7248-4943-8B88-068C4D3207B5
+   :CUSTOM_ID: h-Dependent-services-270
    :END:
 *** Tasks
     :PROPERTIES:
-    :CUSTOM_ID: h-A0127E94-8730-4DC2-B3EA-93BEA06DE7F1
+    :CUSTOM_ID: h-Tasks-537
     :END:
     Papiea defines a task to be a mechanism that tracks the progress of change towards a
     *particular* spec version. It does not matter how the change took place: through a provider,
@@ -434,7 +434,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
     
 **** Interface
      :PROPERTIES:
-     :CUSTOM_ID: h-D04F146F-B16A-481B-9CD6-7552308467FF
+     :CUSTOM_ID: h-Interface-538
      :END:
      #+Name: task-manager-interface
      #+BEGIN_SRC typescript
@@ -451,18 +451,18 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** Papiea Engine
    :PROPERTIES:
-   :CUSTOM_ID: h-2DAE1462-7E56-421D-8625-C24A3CF5E16F
+   :CUSTOM_ID: h-Papiea-Engine-858
    :END:
 *** Initialize
     :PROPERTIES:
-    :CUSTOM_ID: h-8A63D538-E97D-4CC4-B11D-18868DABE10B
+    :CUSTOM_ID: h-Initialize-613
     :END:
     When Papiea loads up, it needs to initialize its database connections, load the providers,
     generate entity validators and expose CRUD and [[*Procedures][Procedural]] APIs.
    
 **** Interface
      :PROPERTIES:
-     :CUSTOM_ID: h-3D76A395-5D87-495F-9138-9373F4CC859C
+     :CUSTOM_ID: h-Interface-461
      :END:
     #+Name: papiea-interface
     #+BEGIN_SRC typescript
@@ -480,7 +480,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 **** Pseudocode
      :PROPERTIES:
-     :CUSTOM_ID: h-D2D67873-9F25-4339-9391-F10C5114F875
+     :CUSTOM_ID: h-Pseudocode-921
      :END:
      
      #+Name: initialize-papiea-pc
@@ -511,7 +511,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
      #+END_SRC
 *** Exporting APIs
     :PROPERTIES:
-    :CUSTOM_ID: h-7899FFEB-F907-4103-B591-11240E8BF9DE
+    :CUSTOM_ID: h-Exporting-APIs-478
     :END:
     Papiea provides three tiers of APIs: Admin, Provider and User facing.
 
@@ -527,12 +527,12 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
     Next sections go into greater details into each of the apis.
 **** Admin facing APIs
      :PROPERTIES:
-     :CUSTOM_ID: h-D6CB7ACB-5E8E-4AC1-92BE-D35612E45558
+     :CUSTOM_ID: h-Admin-facing-APIs-535
      :END:
      The admin apis exposed by Papiea are used to manage providers: registrating, upgrading, deleting etc.
 ***** Pseudocode
       :PROPERTIES:
-      :CUSTOM_ID: h-CF1BC3A4-03DC-4305-ADFD-D8AADFEA0C2E
+      :CUSTOM_ID: h-Pseudocode-145
       :END:
       #+Name: admin-api-pc
       #+BEGIN_SRC typescript
@@ -549,12 +549,12 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
      
 **** Provider facing APIs
      :PROPERTIES:
-     :CUSTOM_ID: h-58B8746D-246B-437B-9457-04F667D64751
+     :CUSTOM_ID: h-Provider-facing-APIs-135
      :END:
      Provider has two sets of APIs:
 ***** Provider's SDK    
       :PROPERTIES:
-      :CUSTOM_ID: h-5256D1D9-391F-40C7-B090-EFC90473CDD0
+      :CUSTOM_ID: h-Provider's-SDK-318
       :END:
       This is actually an SDK rather than an API. The distinction is that this is used by the
       providers developers to define and expose behaviors and APIs to the end user.
@@ -658,7 +658,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ***** Provider to Papiea APIs
       :PROPERTIES:
-      :CUSTOM_ID: h-3862D814-9E80-414B-B086-16A05A2710FE
+      :CUSTOM_ID: h-Provider-to-Papiea-APIs-289
       :END:
      Provider facing APIs define the interactions between a provider and the
      intent-engine.  They let the provider register [[*SFS - Status Fields Signature][Status Fields Signature]]
@@ -694,7 +694,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
      #+END_SRC
 **** User facing APIs
      :PROPERTIES:
-     :CUSTOM_ID: h-84C4558F-1E90-402F-8156-B73E6B2CEBEC
+     :CUSTOM_ID: h-User-facing-APIs-827
      :END:
      The user facing APIs will be generated from all the registered kinds of all registered
      providers. The following pseudo-code will be demosstrating how the CRUD may be implemented.
@@ -732,7 +732,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 *** Handling Potential Diffs    
     :PROPERTIES:
-    :CUSTOM_ID: h-659F7D9D-30A4-4B82-830A-FBA136DB1151
+    :CUSTOM_ID: h-Handling-Potential-Diffs-232
     :END:
     The engine will check for potential diffs on entities as a response to a few events:
     1. A spec change took place
@@ -741,7 +741,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
      
 *** Change Spec
     :PROPERTIES:
-    :CUSTOM_ID: h-73267886-ACA6-4CD7-AB24-E0939F5131A5
+    :CUSTOM_ID: h-Change-Spec-931
     :END:
     A spec can only change through the [[*User facing APIs][User facing APIs]]. It returns an [[*Intentful Tasks][Intentful Tasks]] which is then
     used to track this change. After the task is returned the system verifies that the change is
@@ -754,7 +754,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 **** Change Spec Handler Pseudocode
      :PROPERTIES:
-     :CUSTOM_ID: h-5161D1F8-44C7-46E5-8AF9-35BACC9CC8E7
+     :CUSTOM_ID: h-Change-Spec-Handler-Pseudocode-772
      :END:
      #+BEGIN_SRC typescript
        function handle_spec_change(kind: Kind, papiea: Papiea) {
@@ -795,7 +795,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 *** Update Status
     :PROPERTIES:
-    :CUSTOM_ID: h-C7BC0BF7-81D0-45CD-BE03-399A8071F016
+    :CUSTOM_ID: h-Update-Status-113
     :END:
     A change of status may only arrive from a provider through the [[*Provider's SDK][Provider's SDK]]'s =update_status=
     function. A change of status may cause differences with regards to a the current spec, and so it
@@ -804,7 +804,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 *** SFS - Status Fields Signature
     :PROPERTIES:
-    :CUSTOM_ID: h-0AFEADAD-0843-4364-971F-726CFA756F0A
+    :CUSTOM_ID: h-SFS---Status-Fields-Signature-713
     :END:
     
     The Status Fields Signature is a formal dsl that describes which fields in status have to change
@@ -919,7 +919,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 **** Formal syntax of SFS
      :PROPERTIES:
-     :CUSTOM_ID: h-B64344FB-FD29-40E2-B7B8-336E36E010DC
+     :CUSTOM_ID: h-Formal-syntax-of-SFS-552
      :END:
      The following is a formal syntax describing SFS:
 
@@ -938,7 +938,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
     
 *** Intentful core
     :PROPERTIES:
-    :CUSTOM_ID: h-7AB58359-9E2C-4AB3-BE19-05E0EE8EB8C3
+    :CUSTOM_ID: h-Intentful-core-559
     :END:
     At the core of Papiea lies the intentful behavior mechanism. To establish this mechanism we need the following:
     1. A representation of the user desire ([[*Spec][Spec]])
@@ -997,7 +997,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
     #+END_SRC
 **** Differ
      :PROPERTIES:
-     :CUSTOM_ID: h-8D057AB6-1A0C-410C-9C39-66FFB86E234F
+     :CUSTOM_ID: h-Differ-752
      :END:
      The differ is at the core of identifying the next intentful command to be invoked. It is required for a few reasons:
 
@@ -1063,7 +1063,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 **** Intentful Execution
      :PROPERTIES:
-     :CUSTOM_ID: h-3FBDA8BC-C7F9-450F-B2A6-52A71B2953E8
+     :CUSTOM_ID: h-Intentful-Execution-807
      :END:
      Once a =Diff= was constructed by the =Differ=, it can then execute the handler function on the
      proper provider. 
@@ -1098,7 +1098,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 *** Execution ID
     :PROPERTIES:
-    :CUSTOM_ID: h-6A154AB2-B69C-4C91-9338-198DB12F0672
+    :CUSTOM_ID: h-Execution-ID-113
     :END:
     In order for Papiea to keep track of the state of these decoupled execution paths, a simple
     technique is employed. In the =provider_sdk=, when an intentful command has been invoked, the
@@ -1133,7 +1133,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 *** Procedures Signatures
     :PROPERTIES:
-    :CUSTOM_ID: h-2D1D7EA5-3FF3-4536-BBCC-6CA2F59AFC53
+    :CUSTOM_ID: h-Procedures-Signatures-799
     :END:
     Procedures are functions that providers can expose directly to an entity. These functions are
     not intentful by design, and usually cannot be expressed in terms of a spec change.
@@ -1158,7 +1158,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
     
 **** Procedure Signature struct
      :PROPERTIES:
-     :CUSTOM_ID: h-33462E2A-9A02-4C95-ADFF-0C6CA0CAE12B
+     :CUSTOM_ID: h-Procedure-Signature-struct-647
      :END:
      #+Name: procedure-signature
      #+BEGIN_SRC go
@@ -1169,19 +1169,19 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
      #+END_SRC
 *** Understanding Deltas
     :PROPERTIES:
-    :CUSTOM_ID: h-7F774C3C-7E2E-44EA-84B9-21E57E4DF769
+    :CUSTOM_ID: h-Understanding-Deltas-85
     :END:
 **** Matching SFSs to Deltas
      :PROPERTIES:
-     :CUSTOM_ID: h-A1BBF1FF-5B15-44B9-AF53-3FC413643E18
+     :CUSTOM_ID: h-Matching-SFSs-to-Deltas-833
      :END:
 **** Determining Order
      :PROPERTIES:
-     :CUSTOM_ID: h-760CCC2A-F27B-4661-ACC7-02599C7DCDC7
+     :CUSTOM_ID: h-Determining-Order-204
      :END:
 *** Provider
     :PROPERTIES:
-    :CUSTOM_ID: h-79A5E9CC-9D3C-41EE-A39C-DCF31ABF20FD
+    :CUSTOM_ID: h-Provider-545
     :END:
     This section describes provider handling on Papiea's side. For the provider itself, please see [[*Provider Library][Provider Library]].
     
@@ -1214,40 +1214,40 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
     #+END_SRC
 *** RBCA - test
     :PROPERTIES:
-    :CUSTOM_ID: h-00CF1105-6D19-4BFF-B82A-292EC8F658A9
+    :CUSTOM_ID: h-RBCA---test-415
     :END:
 *** Scalability and Reliability
     :PROPERTIES:
-    :CUSTOM_ID: h-58305CF9-4FD0-480F-9E33-2704A3A7A5CE
+    :CUSTOM_ID: h-Scalability-and-Reliability-438
     :END:
 **** Leader election
      :PROPERTIES:
-     :CUSTOM_ID: h-1E7F99CC-B4B5-41D7-9305-5C64BF9BC9AF
+     :CUSTOM_ID: h-Leader-election-328
      :END:
 **** Fault tolerance
      :PROPERTIES:
-     :CUSTOM_ID: h-E98DAE25-720F-4593-99F5-C3BEC60C6500
+     :CUSTOM_ID: h-Fault-tolerance-995
      :END:
 ***** Dead Papiea Instance
       :PROPERTIES:
-      :CUSTOM_ID: h-9B9442B5-2DA3-4A8A-9748-703AEBA44DC7
+      :CUSTOM_ID: h-Dead-Papiea-Instance-997
       :END:
 ***** Dead Provider
       :PROPERTIES:
-      :CUSTOM_ID: h-9B4A9EFB-8CAE-48CA-AF41-0832D8D6ABC5
+      :CUSTOM_ID: h-Dead-Provider-615
       :END:
 *** Cleanup process
     :PROPERTIES:
-    :CUSTOM_ID: h-3DE0B4AD-2DEB-42C1-9A59-02F509F51C8B
+    :CUSTOM_ID: h-Cleanup-process-996
     :END:
     - automatic deletion?
 *** Auditing
     :PROPERTIES:
-    :CUSTOM_ID: h-87758AA9-A73F-4A88-AE6A-463CA2936DEA
+    :CUSTOM_ID: h-Auditing-539
     :END:
 ** Intentful Tasks                                          :Continue_Fixing:
    :PROPERTIES:
-   :CUSTOM_ID: h-8C40554A-6CC9-4526-881B-2BE3D0A70129
+   :CUSTOM_ID: h-Intentful-Tasks-738
    :END:
    Tasks are intentful in our intent engine. This means that a task defines an intent to "get
    notified when a certain change request has completed". 
@@ -1357,72 +1357,72 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
    #+END_SRC
 ** Provider Library
    :PROPERTIES:
-   :CUSTOM_ID: h-DCCF80B1-45AB-4C5D-BCF5-A433AC4D37C5
+   :CUSTOM_ID: h-Provider-Library-222
    :END:
 *** Define Entity Model
     :PROPERTIES:
-    :CUSTOM_ID: h-89837841-3C06-4788-ABC5-D3B4BE918654
+    :CUSTOM_ID: h-Define-Entity-Model-949
     :END:
 **** YAML
      :PROPERTIES:
-     :CUSTOM_ID: h-9E4F86C1-5088-4875-B037-107AD12A73CB
+     :CUSTOM_ID: h-YAML-165
      :END:
 **** CRUD
      :PROPERTIES:
-     :CUSTOM_ID: h-AC6A2914-694E-4B7F-AB99-F915E1B7A0B2
+     :CUSTOM_ID: h-CRUD-951
      :END:
 *** Initialize
     :PROPERTIES:
-    :CUSTOM_ID: h-610E1433-DBCF-4169-974D-47A63004F6CA
+    :CUSTOM_ID: h-Initialize-776
     :END:
 *** Callback Mechanism
     :PROPERTIES:
-    :CUSTOM_ID: h-576FB59C-5E14-41BB-9D46-253E63A8E082
+    :CUSTOM_ID: h-Callback-Mechanism-840
     :END:
 *** Running Effect Validator
     :PROPERTIES:
-    :CUSTOM_ID: h-7009B3C1-3D1B-465A-93ED-F35A5AB3CF4D
+    :CUSTOM_ID: h-Running-Effect-Validator-388
     :END:
 *** Status Changes Handlers
     :PROPERTIES:
-    :CUSTOM_ID: h-A1199B4C-F994-4548-9A5B-668723B359C2
+    :CUSTOM_ID: h-Status-Changes-Handlers-59
     :END:
 **** Registring
      :PROPERTIES:
-     :CUSTOM_ID: h-E991437E-7322-4F46-92DF-6895F8C7EAC1
+     :CUSTOM_ID: h-Registring-714
      :END:
 **** Running using context
      :PROPERTIES:
-     :CUSTOM_ID: h-AA340191-E756-4642-B9F5-426FFEFF4ECB
+     :CUSTOM_ID: h-Running-using-context-952
      :END:
 *** Procedures
     :PROPERTIES:
-    :CUSTOM_ID: h-5511BB0C-438F-4EF5-96C3-86642690C568
+    :CUSTOM_ID: h-Procedures-51
     :END:
 **** Registring
      :PROPERTIES:
-     :CUSTOM_ID: h-CCFBCE3C-C7DB-48C9-B35D-0201EB13D429
+     :CUSTOM_ID: h-Registring-14
      :END:
 **** Running using context
      :PROPERTIES:
-     :CUSTOM_ID: h-9B305BB6-112D-4D39-9956-60AE424BBCDA
+     :CUSTOM_ID: h-Running-using-context-248
      :END:
 *** Example Provider
     :PROPERTIES:
-    :CUSTOM_ID: h-D6094197-1C78-45BC-9CDD-9E3555897591
+    :CUSTOM_ID: h-Example-Provider-851
     :END:
 
 * Full files
   :PROPERTIES:
-  :CUSTOM_ID: h-738F973C-D059-4099-BAE9-94F6882FE791
+  :CUSTOM_ID: h-Full-files-380
   :END:
 ** Core definitions
    :PROPERTIES:
-   :CUSTOM_ID: h-69C25B02-B7F5-4567-B14F-B33564795341
+   :CUSTOM_ID: h-Core-definitions-982
    :END:
 *** /src/core.ts
     :PROPERTIES:
-    :CUSTOM_ID: h-7CD37704-4271-4745-A480-217D94B04ED7
+    :CUSTOM_ID: h-/src/corets-142
     :END:
     #+BEGIN_SRC typescript :noweb yes :tangle src/core.ts :exports code :mkdirp yes :comments noweb
     
@@ -1446,11 +1446,11 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** Databases
    :PROPERTIES:
-   :CUSTOM_ID: h-895B51BC-E9D2-4277-88DA-1D57403DAD85
+   :CUSTOM_ID: h-Databases-581
    :END:
 *** /src/databases/spec_db_interface.ts
     :PROPERTIES:
-    :CUSTOM_ID: h-3E385A6D-FE01-4147-AC9E-8F814FFF663F
+    :CUSTOM_ID: h-/src/databases/spec_db_interfacets-710
     :END:
     #+BEGIN_SRC typescript :noweb yes :tangle src/databases/spec_db_interface.ts :exports code :mkdirp yes :comments noweb
     <<spec-db-interface>>
@@ -1458,7 +1458,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 *** /src/databases/status_db_interface.ts
     :PROPERTIES:
-    :CUSTOM_ID: h-B6BFED5E-E21F-48F2-BDB6-D7DBBB148401
+    :CUSTOM_ID: h-/src/databases/status_db_interfacets-717
     :END:
     #+BEGIN_SRC typescript :noweb yes :tangle src/databases/status_db_interface.ts :exports code :mkdirp yes :comments noweb
     <<status-db-interface>>
@@ -1466,7 +1466,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 *** /src/databases/providers_db_interface.ts
     :PROPERTIES:
-    :CUSTOM_ID: h-3219E22A-305C-4450-B2DD-D4C0D8C9CE16
+    :CUSTOM_ID: h-/src/databases/providers_db_interfacets-873
     :END:
     #+BEGIN_SRC typescript :noweb yes :tangle src/databases/providers_db_interface.ts :exports code :mkdirp yes :comments noweb
     <<providers-db-interface>>
@@ -1474,11 +1474,11 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** Differ   
    :PROPERTIES:
-   :CUSTOM_ID: h-18B3FC53-9C2C-4F04-B851-03488558444E
+   :CUSTOM_ID: h-Differ-154
    :END:
 *** /src/intentful_core/differ_interface.ts
     :PROPERTIES:
-    :CUSTOM_ID: h-535177EF-5CF0-4663-B7E4-FDB12EEA9D64
+    :CUSTOM_ID: h-/src/intentful_core/differ_interfacets-270
     :END:
     #+BEGIN_SRC typescript :noweb yes :tangle src/intentful_core/differ_interface.ts :exports code :mkdirp yes :comments noweb
     <<Differ-interface>>
@@ -1487,11 +1487,11 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
     #+END_SRC
 ** Tasks
    :PROPERTIES:
-   :CUSTOM_ID: h-EB9EEF16-2F6E-4F58-98AF-3846EC9E997D
+   :CUSTOM_ID: h-Tasks-246
    :END:
 *** /src/tasks/task_manager_interface.ts
     :PROPERTIES:
-    :CUSTOM_ID: h-8C021415-DBCE-4114-8612-4E6459B0D1D4
+    :CUSTOM_ID: h-/src/tasks/task_manager_interfacets-560
     :END:
     #+BEGIN_SRC typescript :noweb yes :tangle src/tasks/task_manager_interface.ts :exports code :mkdirp yes :comments noweb
     <<task-manager-interface>>
@@ -1499,11 +1499,11 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** Provider SDK
    :PROPERTIES:
-   :CUSTOM_ID: h-9C85FED2-F254-40C5-A4BA-17F40E8C2358
+   :CUSTOM_ID: h-Provider-SDK-953
    :END:
 *** Typescript: /src/provider_sdk/typescript_sdk_interface
     :PROPERTIES:
-    :CUSTOM_ID: h-812BAEAD-238A-458B-AB66-C3E9AA93D621
+    :CUSTOM_ID: h-Typescript:-/src/provider_sdk/typescript_sdk_interface-970
     :END:
     #+BEGIN_SRC typescript :noweb yes :tangle src/provider_sdk/typescript_sdk_interface.ts :exports code :mkdirp yes :comments noweb
     <<provider_sdk_ts_provider_interface>>
@@ -1518,7 +1518,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** /src-go/papiea/engine/core.go
    :PROPERTIES:
-   :CUSTOM_ID: h-DACB4BA2-5F6F-4327-B21C-1DC041186E62
+   :CUSTOM_ID: h-/src-go/papiea/engine/corego-476
    :END:
    # :noweb yes :tangle src-go/papiea/engine/core.go :exports code :mkdirp yes
    #+BEGIN_SRC go 
@@ -1562,7 +1562,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
    #+END_SRC
 ** /src-go/papiea/engine/server.go
    :PROPERTIES:
-   :CUSTOM_ID: h-00D3A0EA-DB73-4CED-8F7C-4EB3EAA376E9
+   :CUSTOM_ID: h-/src-go/papiea/engine/servergo-377
    :END:
   # :noweb yes :tangle src-go/papiea/engine/server.go :exports code :mkdirp yes
   #+BEGIN_SRC go 
@@ -1583,7 +1583,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
   
 ** /src-go/papiea/engine/provider.go 
    :PROPERTIES:
-   :CUSTOM_ID: h-E29103D3-EA85-42F9-BF93-145EEE1BF8E7
+   :CUSTOM_ID: h-/src-go/papiea/engine/providergo-964
    :END:
    # :noweb yes :tangle src-go/papiea/engine/provider.go :exports code :mkdirp yes
    #+BEGIN_SRC go 
@@ -1593,7 +1593,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 ** /src-go/papiea/engine/tasks.go
    :PROPERTIES:
-   :CUSTOM_ID: h-9CA353DE-DC37-4567-B1F7-BEDA37B88D7A
+   :CUSTOM_ID: h-/src-go/papiea/engine/tasksgo-352
    :END:
    # :noweb yes :tangle src-go/papiea/engine/tasks.go :exports code :mkdirp yes
    #+BEGIN_SRC go 
@@ -1603,7 +1603,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 * Formalities
   :PROPERTIES:
-  :CUSTOM_ID: h-99185D18-042A-41E8-99D9-318CC64F397B
+  :CUSTOM_ID: h-Formalities-294
   :END:
   Handling resources at a large enough scale can become quite a tedious job. There are many loosly
   connected moving parts that all strive to keep in sync. In reality this keeping in sync is an
@@ -1681,6 +1681,6 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
 * Last notes
   :PROPERTIES:
-  :CUSTOM_ID: h-D503B966-E8E7-489B-836E-7B52758EE2E2
+  :CUSTOM_ID: h-Last-notes-557
   :END:
   - I followed [[http://ehneilsen.net/notebook/orgExamples/org-examples.html][this tutorial]] for generating the source files through this org-mode.
