Silly letter got in the way

--- a/Papiea-design.org
+++ b/Papiea-design.org
@@ -16,7 +16,7 @@
 
 #+HTML: <div class="outline-2" id="meta">
 | *Author*   | {{{author}}} ({{{email}}})    |
-| *Date*     | g{{{time(%Y-%m-%d %H:%M:%S)}}} |
+| *Date*     | {{{time(%Y-%m-%d %H:%M:%S)}}} |
 | *Revision* | DRAFT                         |
 #+HTML: </div>
 
